base/src/test/resources/failure/patterns/issues-archived/issue681.aya.txt
In file $FILE:30:4 ->

  28 | 
  29 | def +-assoc : Pi (x y z : Nat) -> x + (y + z) = (x + y) + z
  30 |   | zero, y, z => idp
           ^--^

Error: There is no parameter for the pattern
         zero
       to match against, given the return type
         Π (x : Nat) → Π (y : Nat) → Π (z : Nat) → = {Nat} (+ x (+ y z)) (+ (+ x
        y) z)
       (and in case it's a function type, you may want to move its parameters before
       the `:` in the signature)

In file $FILE:30:10 ->

  28 | 
  29 | def +-assoc : Pi (x y z : Nat) -> x + (y + z) = (x + y) + z
  30 |   | zero, y, z => idp
                 ^^

Error: There is no parameter for the pattern
         y
       to match against, given the return type
         Π (x : Nat) → Π (y : Nat) → Π (z : Nat) → = {Nat} (+ x (+ y z)) (+ (+ x
        y) z)
       (and in case it's a function type, you may want to move its parameters before
       the `:` in the signature)

In file $FILE:30:13 ->

  28 | 
  29 | def +-assoc : Pi (x y z : Nat) -> x + (y + z) = (x + y) + z
  30 |   | zero, y, z => idp
                    ^^

Error: There is no parameter for the pattern
         z
       to match against, given the return type
         Π (x : Nat) → Π (y : Nat) → Π (z : Nat) → = {Nat} (+ x (+ y z)) (+ (+ x
        y) z)
       (and in case it's a function type, you may want to move its parameters before
       the `:` in the signature)

In file $FILE:31:4 ->

  29 | def +-assoc : Pi (x y z : Nat) -> x + (y + z) = (x + y) + z
  30 |   | zero, y, z => idp
  31 |   | suc x, y, z => pmap suc (+-assoc x y z)
           ^---^

Error: There is no parameter for the pattern
         suc x
       to match against, given the return type
         Π (x : Nat) → Π (y : Nat) → Π (z : Nat) → = {Nat} (+ x (+ y z)) (+ (+ x
        y) z)
       (and in case it's a function type, you may want to move its parameters before
       the `:` in the signature)

In file $FILE:31:11 ->

  29 | def +-assoc : Pi (x y z : Nat) -> x + (y + z) = (x + y) + z
  30 |   | zero, y, z => idp
  31 |   | suc x, y, z => pmap suc (+-assoc x y z)
                  ^^

Error: There is no parameter for the pattern
         y
       to match against, given the return type
         Π (x : Nat) → Π (y : Nat) → Π (z : Nat) → = {Nat} (+ x (+ y z)) (+ (+ x
        y) z)
       (and in case it's a function type, you may want to move its parameters before
       the `:` in the signature)

In file $FILE:31:14 ->

  29 | def +-assoc : Pi (x y z : Nat) -> x + (y + z) = (x + y) + z
  30 |   | zero, y, z => idp
  31 |   | suc x, y, z => pmap suc (+-assoc x y z)
                     ^^

Error: There is no parameter for the pattern
         z
       to match against, given the return type
         Π (x : Nat) → Π (y : Nat) → Π (z : Nat) → = {Nat} (+ x (+ y z)) (+ (+ x
        y) z)
       (and in case it's a function type, you may want to move its parameters before
       the `:` in the signature)

6 error(s), 0 warning(s).
What are you doing?
